--- a/src/color-themes/amber.scss
+++ b/src/color-themes/amber.scss
@@ -30,4 +30,4 @@ $phi-color-amber: (
     A700: $phi-color-amber-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (amber: $phi-color-amber));
+$phi-color-themes: map-merge($phi-color-themes, (amber: $phi-color-amber));
