--- a/src/color-themes/blue.scss
+++ b/src/color-themes/blue.scss
@@ -30,4 +30,4 @@ $phi-color-blue: (
     A700: $phi-color-blue-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (blue: $phi-color-blue));
+$phi-color-themes: map-merge($phi-color-themes, (blue: $phi-color-blue));
