--- a/src/color-themes/deep-purple.scss
+++ b/src/color-themes/deep-purple.scss
@@ -30,4 +30,4 @@ $phi-color-deep-purple: (
     A700: $phi-color-deep-purple-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (deep-purple: $phi-color-deep-purple));
+$phi-color-themes: map-merge($phi-color-themes, (deep-purple: $phi-color-deep-purple));
