--- a/src/color-themes/light-blue.scss
+++ b/src/color-themes/light-blue.scss
@@ -30,4 +30,4 @@ $phi-color-light-blue: (
     A700: $phi-color-light-blue-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (light-blue: $phi-color-light-blue));
+$phi-color-themes: map-merge($phi-color-themes, (light-blue: $phi-color-light-blue));
