--- a/src/color-themes/light-green.scss
+++ b/src/color-themes/light-green.scss
@@ -30,4 +30,4 @@ $phi-color-light-green: (
     A700: $phi-color-light-green-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (light-green: $phi-color-light-green));
+$phi-color-themes: map-merge($phi-color-themes, (light-green: $phi-color-light-green));
