--- a/src/color-themes/purple.scss
+++ b/src/color-themes/purple.scss
@@ -30,4 +30,4 @@ $phi-color-purple: (
     A700: $phi-color-purple-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (purple: $phi-color-purple));
+$phi-color-themes: map-merge($phi-color-themes, (purple: $phi-color-purple));
