--- a/src/color-themes/teal.scss
+++ b/src/color-themes/teal.scss
@@ -30,4 +30,4 @@ $phi-color-teal: (
     A700: $phi-color-teal-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (teal: $phi-color-teal));
+$phi-color-themes: map-merge($phi-color-themes, (teal: $phi-color-teal));
