--- a/src/color-themes/yellow.scss
+++ b/src/color-themes/yellow.scss
@@ -30,4 +30,4 @@ $phi-color-yellow: (
     A700: $phi-color-yellow-A700
 );
 
-$phi-color-maps: map-merge($phi-color-maps, (yellow: $phi-color-yellow));
+$phi-color-themes: map-merge($phi-color-themes, (yellow: $phi-color-yellow));
