--- a/src/components/directives/elements/input/input.scss
+++ b/src/components/directives/elements/input/input.scss
@@ -35,8 +35,11 @@
             border: 0;
             margin: 0;
             padding: 2px 0;
+
             line-height: 1em;
             min-height: 1em;
+            height: auto;
+
             font-size: 1em;
             width: 100%;
             font-weight: normal;
